--- a/tecnomarket/app/templates/app/contacto.html
+++ b/tecnomarket/app/templates/app/contacto.html
@@ -1,15 +1,34 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tecnomarket</title>
-    
-</head>
-<body>
+{% extends 'app/base.html'%} 
 
-<h2> Pagina de contacto</h2>
+{% load static%}
 
-</body>
-</html>
+{% block contenido %}
+{% load crispy_forms_tags %}
+<br> <br>
+<div class="row">
+  <div class="col-12 col-md-6 offset-md-3">
+    <div class="card">
+      <div class="card-body">
+            <h5>Contactanos<h5>
+        <hr>
+        <form action="" class="formulario_contacto" method="POST">
+        {% csrf_token %} 
+        {{form | crispy}}
+
+        <hr>
+        <div >
+        <button type="reset" value="Cancelar" class="btn btn-secondary">Cancelar</button> 
+        &nbsp;
+        <button type="submit" id="btnEnviar" class="btn btn-primary">Enviar</button>
+        <div>
+        
+        </form>
+        {{mensaje}}
+      </div>
+    </div>
+        
+  </div>
+<div>
+
+<table id="tablacontactos"></table>
+{% endblock %}
