--- a/tecnomarket/app/templates/app/galeria.html
+++ b/tecnomarket/app/templates/app/galeria.html
@@ -1,15 +1,28 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tecnomarket</title>
-    
-</head>
-<body>
+{% extends 'app/base.html'%}
 
-<h2> galeria </h2>
+{% load static%}
 
-</body>
-</html>
+{% block js %}
+ <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+{% endblock %}
+
+{% block css %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+{% endblock %}
+
+{% block contenido %}
+<div>
+   <h2>Galería de nuestra tienda</h2>
+           <br><br>
+           <div class="galeria">
+                <a data-fancybox="gallery" href="{% static 'app/img/tienda/tienda1.jpg' %}"><img src="{% static 'app/img/tienda/tienda1.jpg' %}"></a>
+                <a data-fancybox="gallery" href="{% static 'app/img/tienda/tienda2.jpeg' %}"><img src="{% static 'app/img/tienda/tienda2.jpeg' %}"></a>
+                <a data-fancybox="gallery" href="{% static 'app/img/tienda/tienda3.jpg' %}"><img src="{% static 'app/img/tienda/tienda3.jpg' %}"></a>
+                <a data-fancybox="gallery" href="{% static 'app/img/tienda/tienda4.jpg' %}"><img src="{% static 'app/img/tienda/tienda4.jpg' %}"></a>
+                <a data-fancybox="gallery" href="{% static 'app/img/tienda/tienda5.jpg' %}"><img src="{% static 'app/img/tienda/tienda5.jpg' %}"></a>     
+           </div>
+           <br><br>
+</div>
+
+{% endblock %}
+
