--- a/tecnomarket/app/templates/app/home.html
+++ b/tecnomarket/app/templates/app/home.html
@@ -1,15 +1,63 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Tecnomarket</title>
-    
-</head>
-<body>
+{% extends 'app/base.html'%}
 
-<h2> Esta es mi primera pagina</h2>
+{% load static%}
 
-</body>
-</html>
+{% block js%}
+<script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
+  <script>
+        $(document).ready(function() {
+          $('.slider').bxSlider({
+              mode: 'fade',//horizontal, vertical, fade
+              auto: true,
+              pause: 2000
+          });
+        });
+    </script>
+
+{% endblock %}
+
+{% block css%}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+
+{% endblock %}
+
+{% block contenido%}
+
+            <div class="slider">
+                <div>
+                    <img src="{% static 'app/img/banner/banner1.png' %}" alt="">
+                </div>
+                <div>
+                    <img src="{% static 'app/img/banner/banner2.png' %}" alt="">
+                </div>
+                <div>
+                    <img src="{% static 'app/img/banner/banner3.png' %}" alt="">
+                </div>
+            </div>
+
+        {% load humanize %}    
+        <h2>Productos</h2>
+        <div class="productos">
+            {% for p in productos %}    
+            <div class="producto">
+
+                <div class="contenedor_producto">
+                    {% if p.imagen %}
+                    <img src="{{ p.imagen.url }}" alt="imagen producto">
+                    {% endif %}
+                    <div class="detalle">
+                        <h2>{{p.marca | title }}</h2>
+                        <h4>{{p.nombre | title }}</h4>
+                        <h3>${{p.precio | intcomma}}</h3>
+
+                    </div>
+
+                </div>
+
+            </div>    
+            {% endfor %}
+        </div>  
+
+          
+
+{% endblock%}
