--- a/tecnomarket/app/templates/app/base.html
+++ b/tecnomarket/app/templates/app/base.html
@@ -14,6 +14,10 @@
 
 
     <link rel="stylesheet" href="{% static 'app/css/estilos.css' %}">
+
+    {% load pwa%}
+
+    {% progressive_web_app_meta %}
     
 </head>
 <body>
