--- a/tecnomarket/app/templates/app/base.html
+++ b/tecnomarket/app/templates/app/base.html
@@ -106,6 +106,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="{% static 'app/js/menu.js' %}"></script>
     
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <script src="https://www.google.com/recaptcha/api.js"></script>
+    <script>
+    function onSubmit(token) {
+    document.getElementById("demo-form").submit();
+    }
+    </script>
 
     {% block js %}
     {% endblock %}
